Update the recordings.

--- a/src/azure-cli/azure/cli/command_modules/acr/tests/latest/recordings/test_check_name_availability.yaml
+++ b/src/azure-cli/azure/cli/command_modules/acr/tests/latest/recordings/test_check_name_availability.yaml
@@ -17,10 +17,10 @@ interactions:
       ParameterSetName:
       - -n
       User-Agent:
-      - AZURECLI/2.37.0 azsdk-python-azure-mgmt-containerregistry/10.0.0 Python/3.8.10
-        (Windows-10-10.0.22000-SP0)
+      - AZURECLI/2.55.0 azsdk-python-azure-mgmt-containerregistry/10.3.0 Python/3.8.0
+        (Windows-10-10.0.22621-SP0)
     method: POST
-    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.ContainerRegistry/checkNameAvailability?api-version=2022-02-01-preview
+    uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/providers/Microsoft.ContainerRegistry/checkNameAvailability?api-version=2023-11-01-preview
   response:
     body:
       string: '{"nameAvailable":true}'
@@ -32,13 +32,13 @@ interactions:
       content-type:
       - application/json; charset=utf-8
       date:
-      - Sat, 04 Jun 2022 04:28:50 GMT
+      - Fri, 22 Dec 2023 00:02:54 GMT
       expires:
       - '-1'
       pragma:
       - no-cache
       server:
-      - Microsoft-HTTPAPI/2.0
+      - Kestrel
       strict-transport-security:
       - max-age=31536000; includeSubDomains
       transfer-encoding:
