--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1183,7 +1183,7 @@ jobs:
     - PerformanceCheck
     - CheckLinter
     - CodegenCoverage
-    - VerifySphinxDocumentGenerator
+#    - VerifySphinxDocumentGenerator
   condition: and(failed(), in(variables['Build.Reason'], 'BatchedCI'))
   displayName: Notify CI Errors
   pool:
