--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1133,19 +1133,19 @@ jobs:
       KUSTO_TABLE: $(KUSTO_TABLE)
       KUSTO_TENANT_ID: $(KUSTO_TENANT_ID)
 
-- job: VerifySphinxDocumentGenerator
-  displayName: "Verify Sphinx Document Generator"
-  pool:
-    name: ${{ variables.ubuntu_pool }}
-  steps:
-  - task: UsePythonVersion@0
-    displayName: 'Use Python 3.10'
-    inputs:
-      versionSpec: 3.10
-  - bash: pip install --upgrade pip wheel
-    displayName: "Install pip and wheel"
-  - bash: ./scripts/ci/test_ref_doc.sh
-    displayName: "Verify Sphinx Document Generator"
+#- job: VerifySphinxDocumentGenerator
+#  displayName: "Verify Sphinx Document Generator"
+#  pool:
+#    name: ${{ variables.ubuntu_pool }}
+#  steps:
+#  - task: UsePythonVersion@0
+#    displayName: 'Use Python 3.10'
+#    inputs:
+#      versionSpec: 3.10
+#  - bash: pip install --upgrade pip wheel
+#    displayName: "Install pip and wheel"
+#  - bash: ./scripts/ci/test_ref_doc.sh
+#    displayName: "Verify Sphinx Document Generator"
 
 - job: NotifyCIErrors
   dependsOn:
@@ -1183,7 +1183,7 @@ jobs:
     - PerformanceCheck
     - CheckLinter
     - CodegenCoverage
-    - VerifySphinxDocumentGenerator
+#    - VerifySphinxDocumentGenerator
   condition: and(failed(), in(variables['Build.Reason'], 'BatchedCI'))
   displayName: Notify CI Errors
   pool:
