--- a/.github/workflows/AddIssueComment.yml
+++ b/.github/workflows/AddIssueComment.yml
@@ -5,6 +5,8 @@ on:
 jobs:
   thank-user:
     runs-on: ubuntu-20.04
+    permissions:
+      issues: write
     name: Say thanks for the Issue
     steps:
       - name: comment on the issue
