--- a/.github/workflows/AddPRComment.yml
+++ b/.github/workflows/AddPRComment.yml
@@ -8,6 +8,8 @@ permissions:
 jobs:
   thank-user:
     runs-on: ubuntu-20.04
+    permissions:
+      pull-requests: write
     name: Say thanks for the PR
     steps:
       - name: get message
