Remove secrets from unit test recordings

--- a/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_workloadprofiles.yaml
+++ b/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_workloadprofiles.yaml
@@ -9628,7 +9628,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"b8Hf0FWCjMIyHK8vfj1C6j9B5gNiZQ90KT9r8Zk6lwA="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue"}}'
     headers:
       cache-control:
       - no-cache
@@ -9716,7 +9716,7 @@ interactions:
 - request:
     body: '{"properties": {"DOCKER_REGISTRY_SERVER_URL": "mcr.microsoft.com", "FUNCTIONS_EXTENSION_VERSION":
       "~4", "AzureWebJobsStorage": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==",
-      "WEBSITE_AUTH_ENCRYPTION_KEY": "b8Hf0FWCjMIyHK8vfj1C6j9B5gNiZQ90KT9r8Zk6lwA=",
+      "WEBSITE_AUTH_ENCRYPTION_KEY": "fakeValue",
       "AzureWebJobsDashboard": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       Accept:
@@ -9931,7 +9931,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"b8Hf0FWCjMIyHK8vfj1C6j9B5gNiZQ90KT9r8Zk6lwA=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
@@ -9985,7 +9985,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"b8Hf0FWCjMIyHK8vfj1C6j9B5gNiZQ90KT9r8Zk6lwA=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
@@ -10244,7 +10244,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"b8Hf0FWCjMIyHK8vfj1C6j9B5gNiZQ90KT9r8Zk6lwA=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
@@ -10350,7 +10350,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"b8Hf0FWCjMIyHK8vfj1C6j9B5gNiZQ90KT9r8Zk6lwA=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
@@ -10945,7 +10945,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionapp000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"b8Hf0FWCjMIyHK8vfj1C6j9B5gNiZQ90KT9r8Zk6lwA=","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
+        Central US (Stage)","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeValue","AzureWebJobsDashboard":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey=="}}'
     headers:
       cache-control:
       - no-cache
