--- a/src/azure-cli/requirements.py3.Darwin.txt
+++ b/src/azure-cli/requirements.py3.Darwin.txt
@@ -81,6 +81,7 @@ azure-mgmt-storage==21.1.0
 azure-mgmt-synapse==2.1.0b5
 azure-mgmt-trafficmanager==1.0.0
 azure-mgmt-web==7.2.0
+azure-monitor-query==1.2.0
 azure-multiapi-storage==1.2.0
 azure-nspkg==3.0.2
 azure-storage-common==1.4.2
