--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_export_import.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_export_import.yaml
@@ -460,8 +460,8 @@ interactions:
         \"Enabled\",\r\n    \"tenantSettings\": {},\r\n    \"redisConfiguration\":
         {\r\n      \"maxclients\": \"7500\",\r\n      \"maxmemory-reserved\": \"642\",\r\n
         \     \"maxfragmentationmemory-reserved\": \"642\",\r\n      \"maxmemory-delta\":
-        \"642\"\r\n    },\r\n    \"accessKeys\": {\r\n      \"primaryKey\": \"WblLa1IskpAlyIbp7Cp1m3yWZsALwdj4RAzCaDWqMKI=\",\r\n
-        \     \"secondaryKey\": \"dUyRJj2OTTcChmCZhxhxKWod0vbNppDAhAzCaJb8qHM=\"\r\n
+        \"642\"\r\n    },\r\n    \"accessKeys\": {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": [],\r\n
         \   \"updateChannel\": \"Stable\"\r\n  }\r\n}"
