--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_with_aad.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_with_aad.yaml
@@ -37,8 +37,8 @@ interactions:
         {\r\n      \"aad-enabled\": \"true\",\r\n      \"maxclients\": \"7500\",\r\n
         \     \"maxmemory-reserved\": \"642\",\r\n      \"maxfragmentationmemory-reserved\":
         \"642\",\r\n      \"maxmemory-delta\": \"642\"\r\n    },\r\n    \"accessKeys\":
-        {\r\n      \"primaryKey\": \"FRZgXspTvMohyzXhMmZDBEmnwVorglmaNAzCaE9gag0=\",\r\n
-        \     \"secondaryKey\": \"6h17jEmu0DCiNTST8unp3tO0f9z5cZ74KAzCaMMxusE=\"\r\n
+        {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": [],\r\n
         \   \"updateChannel\": \"Stable\"\r\n  }\r\n}"
