--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_with_mandatory_args.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_with_mandatory_args.yaml
@@ -34,8 +34,8 @@ interactions:
         {},\r\n    \"redisConfiguration\": {\r\n      \"maxclients\": \"256\",\r\n
         \     \"maxmemory-reserved\": \"30\",\r\n      \"maxfragmentationmemory-reserved\":
         \"30\",\r\n      \"maxmemory-delta\": \"30\"\r\n    },\r\n    \"accessKeys\":
-        {\r\n      \"primaryKey\": \"PAgATuzzuLCDPrb4ExiJno3z35CQmUXuFAzCaGn4rxo=\",\r\n
-        \     \"secondaryKey\": \"GXNjVS64NA9VC4UiL7AUTzwCeYw3I0CbFAzCaIBrTo4=\"\r\n
+        {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": [],\r\n
         \   \"updateChannel\": \"Stable\"\r\n  }\r\n}"
