--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_managed_identity.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_managed_identity.yaml
@@ -36,8 +36,8 @@ interactions:
         {},\r\n    \"redisConfiguration\": {\r\n      \"maxclients\": \"256\",\r\n
         \     \"maxmemory-reserved\": \"30\",\r\n      \"maxfragmentationmemory-reserved\":
         \"30\",\r\n      \"maxmemory-delta\": \"30\"\r\n    },\r\n    \"accessKeys\":
-        {\r\n      \"primaryKey\": \"X3iv1kCOaPLFp4eqhOQmN8ZvQz47GTahCAzCaLkLPaY=\",\r\n
-        \     \"secondaryKey\": \"p3yZ6ORLdSP6cpyiPHC1zLYtIpXXzO434AzCaDA5Vvc=\"\r\n
+        {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": [],\r\n
         \   \"updateChannel\": \"Stable\"\r\n  },\r\n  \"identity\": {\r\n    \"type\":
