--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_with_tlsversion_and_settings.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_with_tlsversion_and_settings.yaml
@@ -35,8 +35,8 @@ interactions:
         \"Enabled\",\r\n    \"tenantSettings\": {\r\n      \"hello\": \"1\"\r\n    },\r\n
         \   \"redisConfiguration\": {\r\n      \"maxclients\": \"256\",\r\n      \"maxmemory-reserved\":
         \"30\",\r\n      \"maxfragmentationmemory-reserved\": \"30\",\r\n      \"maxmemory-delta\":
-        \"30\"\r\n    },\r\n    \"accessKeys\": {\r\n      \"primaryKey\": \"bcFQfakjTNTHrGUQrW5slhUIaDTBSUZpxAzCaCLkMAc=\",\r\n
-        \     \"secondaryKey\": \"K6KUAuNfleVFNSpsA6lU8IoelJZm8xflhAzCaNZ4Vmg=\"\r\n
+        \"30\"\r\n    },\r\n    \"accessKeys\": {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": [],\r\n
         \   \"updateChannel\": \"Stable\"\r\n  }\r\n}"
