--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_regenerate_key_update_tags.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_regenerate_key_update_tags.yaml
@@ -1353,7 +1353,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_redis000001/providers/Microsoft.Cache/redis/cliredis000002/regenerateKey?api-version=2023-08-01
   response:
     body:
-      string: '{"primaryKey":"5iHCbBWFaxtvCWk63sqSq0RGKHv8nWs0uAzCaNQRMoQ=","secondaryKey":"oo8Sezm5LslUaKnIVWu7o8E0VhDyYnXhVAzCaErNqWk="}'
+      string: '{"primaryKey":"***=","secondaryKey":"***="}'
     headers:
       cache-control:
       - no-cache
@@ -1407,7 +1407,7 @@ interactions:
     uri: https://management.azure.com/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/cli_test_redis000001/providers/Microsoft.Cache/redis/cliredis000002/regenerateKey?api-version=2023-08-01
   response:
     body:
-      string: '{"primaryKey":"5iHCbBWFaxtvCWk63sqSq0RGKHv8nWs0uAzCaNQRMoQ=","secondaryKey":"9x5NIkFbht0fjoNfnsVMF8IzFwZ7FUBeYAzCaN3D4NY="}'
+      string: '{"primaryKey":"***=","secondaryKey":"***="}'
     headers:
       cache-control:
       - no-cache
