--- a/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_server_link.yaml
+++ b/src/azure-cli/azure/cli/command_modules/redis/tests/latest/recordings/test_redis_cache_server_link.yaml
@@ -1172,8 +1172,8 @@ interactions:
         \"Enabled\",\r\n    \"tenantSettings\": {},\r\n    \"redisConfiguration\":
         {\r\n      \"maxclients\": \"7500\",\r\n      \"maxmemory-reserved\": \"642\",\r\n
         \     \"maxfragmentationmemory-reserved\": \"642\",\r\n      \"maxmemory-delta\":
-        \"642\"\r\n    },\r\n    \"accessKeys\": {\r\n      \"primaryKey\": \"CI1GEK8dB1POezC15tQwUOqe1TL0MMs9gAzCaAOCZvA=\",\r\n
-        \     \"secondaryKey\": \"XA8XGo6c1tCNP4ogWHuQ28V1du0eabk0AAzCaNXtXJg=\"\r\n
+        \"642\"\r\n    },\r\n    \"accessKeys\": {\r\n      \"primaryKey\": \"***=\",\r\n
+        \     \"secondaryKey\": \"***=\"\r\n
         \   },\r\n    \"hostName\": \"cliredis000002sec.redis.cache.windows.net\",\r\n
         \   \"port\": 6379,\r\n    \"sslPort\": 6380,\r\n    \"linkedServers\": [],\r\n
         \   \"updateChannel\": \"Stable\"\r\n  }\r\n}"
