--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -300,7 +300,7 @@ jobs:
       filePath: build_scripts\windows\scripts\test_msi_installation.ps1
 
 - job: TestZipInstallation
-  displayName: Test ZIP Package
+  displayName: Test ZIP Installation
   dependsOn: BuildWindowsZIP
   strategy:
     matrix:
