--- a/src/azure-cli/requirements.py3.Linux.txt
+++ b/src/azure-cli/requirements.py3.Linux.txt
@@ -17,7 +17,6 @@ azure-keyvault-administration==4.4.0b2
 azure-keyvault-certificates==4.7.0
 azure-keyvault-keys==4.9.0b3
 azure-keyvault-secrets==4.7.0
-azure-loganalytics==0.1.0
 azure-mgmt-advisor==9.0.0
 azure-mgmt-apimanagement==4.0.0
 azure-mgmt-appconfiguration==3.0.0
@@ -81,6 +80,7 @@ azure-mgmt-storage==21.1.0
 azure-mgmt-synapse==2.1.0b5
 azure-mgmt-trafficmanager==1.0.0
 azure-mgmt-web==7.2.0
+azure-monitor-query==1.2.0
 azure-multiapi-storage==1.2.0
 azure-nspkg==3.0.2
 azure-storage-common==1.4.2
