{AKS} remove TA command --source-resource-id parameter alias -r

--- a/src/azure-cli/azure/cli/command_modules/acs/tests/latest/recordings/test_aks_create_with_trustedaccess_rolebinding.yaml
+++ b/src/azure-cli/azure/cli/command_modules/acs/tests/latest/recordings/test_aks_create_with_trustedaccess_rolebinding.yaml
@@ -703,7 +703,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --cluster-name -n -r --roles
+      - --resource-group --cluster-name -n --source-resource-id --roles
       User-Agent:
       - AZURECLI/2.56.0 azsdk-python-azure-mgmt-containerservice/28.0.0 Python/3.8.10
         (Linux-6.2.0-1018-azure-x86_64-with-glibc2.29)
@@ -754,7 +754,7 @@ interactions:
       Content-Type:
       - application/json
       ParameterSetName:
-      - --resource-group --cluster-name -n -r --roles
+      - --resource-group --cluster-name -n --source-resource-id --roles
       User-Agent:
       - AZURECLI/2.56.0 azsdk-python-azure-mgmt-containerservice/28.0.0 Python/3.8.10
         (Linux-6.2.0-1018-azure-x86_64-with-glibc2.29)
@@ -804,7 +804,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --cluster-name -n -r --roles
+      - --resource-group --cluster-name -n --source-resource-id --roles
       User-Agent:
       - AZURECLI/2.56.0 azsdk-python-azure-mgmt-containerservice/28.0.0 Python/3.8.10
         (Linux-6.2.0-1018-azure-x86_64-with-glibc2.29)
@@ -851,7 +851,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --cluster-name -n -r --roles
+      - --resource-group --cluster-name -n --source-resource-id --roles
       User-Agent:
       - AZURECLI/2.56.0 azsdk-python-azure-mgmt-containerservice/28.0.0 Python/3.8.10
         (Linux-6.2.0-1018-azure-x86_64-with-glibc2.29)
@@ -899,7 +899,7 @@ interactions:
       Connection:
       - keep-alive
       ParameterSetName:
-      - --resource-group --cluster-name -n -r --roles
+      - --resource-group --cluster-name -n --source-resource-id --roles
       User-Agent:
       - AZURECLI/2.56.0 azsdk-python-azure-mgmt-containerservice/28.0.0 Python/3.8.10
         (Linux-6.2.0-1018-azure-x86_64-with-glibc2.29)
