--- a/src/azure-cli/azure/cli/command_modules/billing/linter_exclusions.yml
+++ b/src/azure-cli/azure/cli/command_modules/billing/linter_exclusions.yml
@@ -47,4 +47,9 @@ billing subscription validate-move:
     destination_invoice_section_id:
       rule_exclusions:
         - option_length_too_long
+billing enrollment-account billing-permission list:
+  parameters:
+    enrollment_account_name:
+      rule_exclusions:
+        - option_length_too_long
 ...
