Remove root folder, use bin folder

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -325,7 +325,7 @@ jobs:
   - task: PowerShell@2
     displayName: Expand and Load CLI
     inputs:
-      filePath: build_scripts\windows\scripts\test_zip_package.ps1
+      filePath: build_scripts\windows\scripts\test_zip_installation.ps1
 
 - job: BuildDockerImageAlpine
   displayName: Build Docker Image Alpine
