Use fake values for recording

--- a/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_enable_dapr.yaml
+++ b/src/azure-cli/azure/cli/command_modules/appservice/tests/latest/recordings/test_functionapp_enable_dapr.yaml
@@ -3771,7 +3771,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionappdapr000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"qiopYlsp5anaf3jLevUo+igtwdyk6yyCGDIyZzSxPy8="}}'
+        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeAuthValue"}}'
     headers:
       cache-control:
       - no-cache
@@ -3854,7 +3854,7 @@ interactions:
 - request:
     body: '{"properties": {"DOCKER_REGISTRY_SERVER_URL": "mcr.microsoft.com", "FUNCTIONS_EXTENSION_VERSION":
       "~4", "AzureWebJobsStorage": "DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==",
-      "WEBSITE_AUTH_ENCRYPTION_KEY": "qiopYlsp5anaf3jLevUo+igtwdyk6yyCGDIyZzSxPy8=",
+      "WEBSITE_AUTH_ENCRYPTION_KEY": "fakeAuthValue",
       "APPLICATIONINSIGHTS_CONNECTION_STRING": "InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
     headers:
       Accept:
@@ -4072,7 +4072,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionappdapr000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"qiopYlsp5anaf3jLevUo+igtwdyk6yyCGDIyZzSxPy8=","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
+        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeAuthValue","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
     headers:
       cache-control:
       - no-cache
@@ -4123,7 +4123,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionappdapr000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"qiopYlsp5anaf3jLevUo+igtwdyk6yyCGDIyZzSxPy8=","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
+        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeAuthValue","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
     headers:
       cache-control:
       - no-cache
@@ -4225,7 +4225,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionappdapr000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"qiopYlsp5anaf3jLevUo+igtwdyk6yyCGDIyZzSxPy8=","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
+        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeAuthValue","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
     headers:
       cache-control:
       - no-cache
@@ -4327,7 +4327,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionappdapr000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"qiopYlsp5anaf3jLevUo+igtwdyk6yyCGDIyZzSxPy8=","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
+        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeAuthValue","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
     headers:
       cache-control:
       - no-cache
@@ -4921,7 +4921,7 @@ interactions:
   response:
     body:
       string: '{"id":"/subscriptions/00000000-0000-0000-0000-000000000000/resourceGroups/clitest.rg000001/providers/Microsoft.Web/sites/functionappdapr000003/config/appsettings","name":"appsettings","type":"Microsoft.Web/sites/config","location":"North
-        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"qiopYlsp5anaf3jLevUo+igtwdyk6yyCGDIyZzSxPy8=","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
+        Europe","properties":{"DOCKER_REGISTRY_SERVER_URL":"mcr.microsoft.com","FUNCTIONS_EXTENSION_VERSION":"~4","AzureWebJobsStorage":"DefaultEndpointsProtocol=https;EndpointSuffix=core.windows.net;AccountName=clitest000002;AccountKey=veryFakedStorageAccountKey==","WEBSITE_AUTH_ENCRYPTION_KEY":"fakeAuthValue","APPLICATIONINSIGHTS_CONNECTION_STRING":"InstrumentationKey=9df319e0-d0f7-4bf5-a46e-6bed35554d97;IngestionEndpoint=https://northeurope-2.in.applicationinsights.azure.com/;LiveEndpoint=https://northeurope.livediagnostics.monitor.azure.com/"}}'
     headers:
       cache-control:
       - no-cache
