--- a/scripts/regression_test/regression_test.yml
+++ b/scripts/regression_test/regression_test.yml
@@ -114,21 +114,24 @@ jobs:
 
           git checkout -b ${GITHUB_BRANCH} ${GITHUB_REPO}/${GITHUB_BRANCH}
     - template: ../../.azure-pipelines/templates/azdev_setup.yml
-    - bash: |
-        set -ev
-
-        source env/bin/activate
-
-        if [[ -n "$(CUSTOM_WHL_URL)" ]]; then
-          pip install $(CUSTOM_WHL_URL) --force-reinstall
-        fi
-
-        az login -u $(CLI_LIVE_TEST_ACCOUNT) -p "$(CLI_LIVE_TEST_PASSWORD)"
-        az account set -s 0b1f6471-1bf0-4dda-aec3-cb9272f09590
-
-        serial_modules="appservice botservice cloud network azure-cli-core azure-cli-telemetry"
-        python scripts/ci/automation_full_test.py "8" "$(Instance_idx)" "latest" "$serial_modules" "True"
-      displayName: "Rerun tests"
+    - task: AzureCLI@1
+      displayName: 'Rerun tests'
+      inputs:
+        azureSubscription: 'azure-cli-sdk-test-2024'
+        scriptLocation: inlineScript
+        inlineScript: |
+          set -ev
+  
+          source env/bin/activate
+  
+          if [[ -n "$(CUSTOM_WHL_URL)" ]]; then
+            pip install $(CUSTOM_WHL_URL) --force-reinstall
+          fi
+  
+          az account set -s 0b1f6471-1bf0-4dda-aec3-cb9272f09590
+  
+          serial_modules="appservice botservice cloud network azure-cli-core azure-cli-telemetry"
+          python scripts/ci/automation_full_test.py "8" "$(Instance_idx)" "latest" "$serial_modules" "True"
     - task: PublishTestResults@2
       inputs:
         testResultsFiles: '/$(HOME)/.azdev/env_config/mnt/vss/_work/1/s/env/test_results_*.xml'
